{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "PlayerAction",
            "id": "40a3dd1d-e763-4ad3-bb4a-2f044250ab0f",
            "actions": [
                {
                    "name": "moveAction",
                    "type": "Button",
                    "id": "dc3cf149-d0fb-4019-ad95-3fb5a0f1c282",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "attackAction",
                    "type": "Button",
                    "id": "89116e3c-a7c5-4273-95b2-4e15c229f6c4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "swapAction",
                    "type": "Button",
                    "id": "61f4b49a-3b61-4ad9-87d6-7e783e34fede",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "981eb77e-72fb-413c-9bff-b769ab19d770",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "moveAction",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "a5820c05-e1bc-4774-bb3b-17b2258dd3c5",
                    "path": "<Keyboard>/#(Z)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "moveAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ca630b30-261a-4d9a-9f68-5760ed827827",
                    "path": "<Keyboard>/#(S)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "moveAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "1dc84df6-9583-4582-a0c7-63cc29948d47",
                    "path": "<Keyboard>/#(Q)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "moveAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c6cef126-52df-4ef4-99f2-6e745cb25c60",
                    "path": "<Keyboard>/#(D)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "moveAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "14164eb4-7ff9-44e6-8c14-57d2105826f8",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "attackAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7e037ed6-bdff-4ff4-8991-107c2ecf1f02",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "swapAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}